@@ -15,7 +15,7 @@ import warnings
 import pytest
 from docutils import nodes
 
-from sphinx.ext.mathjax import MATHJAX_URL
+from sphinx.ext.mathjax import MATHJAX2_URL, MATHJAX3_URL
 from sphinx.testing.util import assert_node
 
 
@@ -220,6 +220,21 @@ def test_mathjax_config(app, status, warning):
     app.builder.build_all()
 
     content = (app.outdir / 'index.html').read_text()
+    assert MATHJAX3_URL in content
+    assert ('<script>'
+            'window.MathJax = {"extensions": ["tex2jax.js"]};'
+            '</script>' in content)
+
+
+@pytest.mark.sphinx('html', testroot='ext-math',
+                    confoverrides={'extensions': ['sphinx.ext.mathjax'],
+                                   'mathjax_version': 2,
+                                   'mathjax_config': {'extensions': ['tex2jax.js']}})
+def test_mathjax_config_for_mathjax2(app, status, warning):
+    app.builder.build_all()
+
+    content = (app.outdir / 'index.html').read_text()
+    assert MATHJAX2_URL in content
     assert ('<script type="text/x-mathjax-config">'
             'MathJax.Hub.Config({"extensions": ["tex2jax.js"]})'
             '</script>' in content)
@@ -231,10 +246,10 @@ def test_mathjax_is_installed_only_if_document_having_math(app, status, warning)
     app.builder.build_all()
 
     content = (app.outdir / 'index.html').read_text()
-    assert MATHJAX_URL in content
+    assert MATHJAX3_URL in content
 
     content = (app.outdir / 'nomath.html').read_text()
-    assert MATHJAX_URL not in content
+    assert MATHJAX3_URL not in content
 
 
 @pytest.mark.sphinx('html', testroot='basic',
